# godot-syntax-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  gdrust-syntax.code-workspace
.github/workflows/: android_builds.yml  godot_builds.yml  ios_builds.yml  linux_builds.yml  macos_builds.yml  release.yml  runner.yml  web_builds.yml  windows_builds.yml
demo/: icon.svg.import  new_script.gd  node_2d.tscn  project.godot  test.tscn
demo/addons/godot_syntax_rust/: Rust.svg.import  rust-syntax.gdextension
demo/addons/rust-syntax/: rust-syntax.gdextension
demo/rust/: Cargo.toml  test.rs
demo/rust/src/: lib.rs  new_script2.rs  test.rs
src/: lib.rs
src/syntax/: mod.rs  rust_language.rs  rust_project_settings.rs  rust_resource_format_loader.rs  rust_resource_format_saver.rs  rust_resource_loader.rs  rust_resource_saver.rs  rust_script.rs  rust_validation.rs
