[package]
name = "godot_rust_syntax"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.1"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", version = "0.1", branch = "master", features=["experimental-threads", "api-4-2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ra_ap_syntax = "0.0"
ra_ap_hir = "0.0"
ra_ap_hir_def = "0.0"
ra_ap_hir_expand = "0.0"
ra_ap_hir_ty = "0.0"
ra_ap_project_model = "0.0"
ra_ap_base_db = "0.0"
ra_ap_vfs = "0.0"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3
